--- a/index5.html
+++ b/index5.html
@@ -1,41 +1,151 @@
-	@media (max-width: 600px) {
-		header {
-			padding: 1.5rem 0.5rem 1rem 0.5rem;
-			border-bottom-left-radius: 18px;
-			border-bottom-right-radius: 18px;
-			font-size: 1rem;
+<!DOCTYPE html>
+<html lang="ar">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>مترجم لغة الإشارة الذكي</title>
+	<link rel="stylesheet" href="../style.css">
+	<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+</head>
+<body>
+
+	<header>
+		<h1>مترجم لغة الإشارة العربي الذكي</h1>
+		<p>ترجمة ذكية وسريعة</p>
+		<div style="display:flex; gap:1.2rem; justify-content:center; margin-top:1rem;">
+		  <span style="background:#37474f; color:#fff; border-radius:32px; padding:0.3rem 1.2rem; font-size:1rem; display:flex; align-items:center; gap:0.5rem; box-shadow:0 2px 8px #0002; font-family:'Cairo', 'Roboto', Arial, sans-serif;">
+		    حصة الشطي <span style="font-size:1.1rem;">👩🏻‍💻</span>
+		  </span>
+		  <span style="background:#37474f; color:#fff; border-radius:32px; padding:0.3rem 1.2rem; font-size:1rem; display:flex; align-items:center; gap:0.5rem; box-shadow:0 2px 8px #0002; font-family:'Cairo', 'Roboto', Arial, sans-serif;">
+		    خديجة العجمي <span style="font-size:1.1rem;">👩🏻‍💻</span>
+		  </span>
+		</div>
+
+		<!-- تم حذف الأزرار بناءً على طلب المستخدم -->
+	</header>
+
+	<section class="combine">
+		<h2>جمع الإشارات لتكوين كلمة بالصور</h2>
+		<p>اكتب الرموز مفصولة ب + (مثال: رمز1+رمز2+رمز3)</p>
+		<input type="text" id="lettersInput" placeholder="اكتب الرموز هنا">
+		<button onclick="combineImages()">تكوين الكلمة</button>
+		<div id="imagesResult" style="margin-top:1.5rem; display:flex; gap:0.5rem; flex-wrap:wrap;"></div>
+	</section>
+
+	<section class="library">
+		<h2>📚 مكتبة صور الإشارات</h2>
+		<input type="text" id="searchInput" placeholder="ابحث عن رمز..." style="width:100%; padding:0.7rem; border-radius:10px; border:1px solid #ddd; margin-top:0.7rem; font-size:1rem;">
+		<div id="imagesLibrary" style="display:flex; gap:0.5rem; flex-wrap:wrap; margin-top:1rem;"></div>
+	</section>
+	<section class="upload" style="background:#fff; margin:2rem auto; padding:1.5rem 1.2rem; border-radius:20px; box-shadow:0 2px 12px rgba(106,130,251,0.07); max-width:500px;">
+		<h2>رفع وربط صورة الإشارة</h2>
+		<form id="uploadForm" onsubmit="saveImage(event)" style="display:flex; flex-direction:column; gap:1rem;">
+			<input type="file" id="imageInput" accept="image/*" required>
+			<input type="text" id="symbolInput" placeholder="اكتب الرمز" required style="padding:0.7rem; border-radius:10px; border:1px solid #ddd; font-size:1rem;">
+			<button type="submit" style="padding:0.7rem 1.5rem; border-radius:20px; background:#6a82fb; color:#fff; border:none; cursor:pointer;">حفظ</button>
+		</form>
+		<div id="imagesList" style="margin-top:1.5rem;"></div>
+	</section>
+	</section>
+
+	<footer>
+		<p>إعداد خديجة العجمي وحصة الشطي | 2025 ©</p>
+		<script>
+		// رفع وربط صورة الإشارة
+		let savedImages = [];
+		function saveImage(e) {
+			e.preventDefault();
+			const fileInput = document.getElementById('imageInput');
+			const symbolInput = document.getElementById('symbolInput');
+			const file = fileInput.files[0];
+			const symbol = symbolInput.value.trim();
+			if (!file || !symbol) return;
+			const reader = new FileReader();
+			reader.onload = function(ev) {
+				savedImages.push({ symbol, src: ev.target.result });
+				renderImagesLibrary();
+				fileInput.value = '';
+				symbolInput.value = '';
+			};
+			reader.readAsDataURL(file);
 		}
-		h1 {
-			font-size: 1.2rem;
+		function renderImagesLibrary(filter = "") {
+			const list = document.getElementById('imagesLibrary');
+			list.innerHTML = '';
+			savedImages.filter(img => img.symbol.includes(filter)).forEach(img => {
+				const div = document.createElement('div');
+				div.className = 'box';
+				div.style = 'padding:0;display:flex;flex-direction:column;align-items:center;';
+				div.innerHTML = `<img src="${img.src}" alt="${img.symbol}" style="width:60px;height:60px;border-radius:10px;border:1px solid #ddd;object-fit:cover;"> <span style="font-size:1.1rem;color:#fff;display:block;">${img.symbol}</span>`;
+				list.appendChild(div);
+			});
 		}
-		.combine, .library, .upload {
-			padding: 1rem 0.5rem;
-			border-radius: 12px;
-			max-width: 98vw;
-			font-size: 0.95rem;
+		document.getElementById('searchInput').addEventListener('input', function(e) {
+			renderImagesLibrary(e.target.value);
+		});
+		renderImagesLibrary();
+
+		// تكوين الكلمة من الصور
+		function combineImages() {
+			var input = document.getElementById('lettersInput').value;
+			var symbols = input.split('+').map(l => l.trim()).filter(l => l);
+			var resultDiv = document.getElementById('imagesResult');
+			resultDiv.innerHTML = '';
+			symbols.forEach(symbol => {
+				var imgObj = savedImages.find(img => img.symbol === symbol);
+				if (imgObj) {
+					var img = document.createElement('img');
+					img.src = imgObj.src;
+					img.alt = symbol;
+					img.style = 'width:60px;height:60px;border-radius:10px;border:1px solid #ddd;object-fit:cover;';
+					resultDiv.appendChild(img);
+				}
+			});
 		}
-		input[type="text"], input[type="file"] {
-			font-size: 0.95rem;
-			padding: 0.5rem;
+		// عرض الصور المحفوظة أسفل نموذج الرفع
+		function renderImages() {
+			const list = document.getElementById('imagesList');
+			list.innerHTML = '';
+			savedImages.forEach(img => {
+				const div = document.createElement('div');
+				div.style = 'display:flex;align-items:center;gap:1rem;margin-bottom:1rem;';
+				div.innerHTML = `<img src="${img.src}" alt="${img.symbol}" style="width:60px;height:60px;border-radius:10px;border:1px solid #ddd;object-fit:cover;"> <span style="font-size:1.1rem;color:#6a82fb;">${img.symbol}</span>`;
+				list.appendChild(div);
+			});
 		}
-		button, .box, .upload button {
-			font-size: 0.95rem;
-			padding: 0.5rem 1rem;
-			border-radius: 12px;
+		</script>
+		<script>
+		// مكتبة الإشارات
+		let allLetters = ["أ", "ب", "ت", "ث", "ج"];
+		function renderLetters(filter = "") {
+			const list = document.getElementById('lettersList');
+			list.innerHTML = "";
+			allLetters.filter(l => l.includes(filter)).forEach(letter => {
+				const box = document.createElement('div');
+				box.className = 'box';
+				box.textContent = letter;
+				box.title = 'اضغط لسماع الإشارة';
+				box.onclick = function() { alert('سماع الإشارة: ' + letter); };
+				list.appendChild(box);
+			});
 		}
-		.box img, #imagesResult img, #imagesLibrary img {
-			width: 40px !important;
-			height: 40px !important;
+		document.getElementById('searchInput').addEventListener('input', function(e) {
+			renderLetters(e.target.value);
+		});
+		renderLetters();
+
+		// تكوين الكلمة
+		function combineLetters() {
+			var input = document.getElementById('lettersInput').value;
+			var letters = input.split('+').map(l => l.trim()).filter(l => l);
+			var result = letters.join('');
+			document.getElementById('result').innerText = result ? 'الكلمة الناتجة: ' + result : '';
 		}
-		footer {
-			font-size: 0.9rem;
-			padding: 0.7rem;
-		}
-		.header-decor span {
-			font-size: 0.9rem !important;
-			padding: 0.2rem 0.7rem !important;
-		}
-	}
+		</script>
+	</footer>
+
+</body>
+</html>
 	width: 100%;
 	padding: 0.7rem;
 	border-radius: 10px;
@@ -74,32 +184,32 @@ header {
 }
 section.combine, section.library {
 	background: #fff;
-	margin: 2rem auto;
-	padding: 2rem 1.5rem;
-	border-radius: 12px;
-	box-shadow: 0 2px 12px rgba(21,101,192,0.07);
-	max-width: 500px;
-	transition: box-shadow 0.2s;
+	margin: 2.5rem auto;
+	padding: 2.2rem 2rem;
+	border-radius: 24px;
+	box-shadow: 0 8px 32px rgba(33,150,243,0.10);
+	max-width: 600px;
+	transition: box-shadow 0.2s, transform 0.2s;
 	transform: none;
 }
 section.combine:hover, section.library:hover {
-	box-shadow: 0 4px 24px rgba(67,206,162,0.13);
+	box-shadow: 0 12px 32px rgba(33,150,243,0.18);
 }
 .box {
-	background: #f5f7fa;
-	color: #1565c0;
-	border-radius: 8px;
-	padding: 1rem 1.5rem;
-	font-size: 1.1rem;
-	margin-bottom: 0.7rem;
-	box-shadow: 0 1px 8px rgba(21,101,192,0.08);
+	background: linear-gradient(135deg, #e3f2fd 0%, #bbdefb 100%);
+	color: #1976d2;
+	border-radius: 16px;
+	padding: 1.2rem 2rem;
+	font-size: 1.15rem;
+	margin-bottom: 1rem;
+	box-shadow: 0 4px 24px rgba(33,150,243,0.10);
 	font-family: 'Cairo', 'Roboto', Arial, sans-serif;
 	transform: none;
 }
 .box:hover {
-	background: #e3e6ea;
-	color: #0d47a1;
-	box-shadow: 0 4px 16px rgba(21,101,192,0.18);
+	background: linear-gradient(135deg, #bbdefb 0%, #e3f2fd 100%);
+	color: #1565c0;
+	box-shadow: 0 12px 32px rgba(33,150,243,0.18);
 	transform: scale(1.04);
 }
 input[type="text"] {
@@ -140,13 +250,52 @@ button:hover {
 }
 footer {
 	text-align: center;
-	padding: 1rem;
-	color: #1565c0;
-	font-size: 1rem;
-	margin-top: 2rem;
-	background: #f5f7fa;
-	border-top: 2px solid #90caf9;
+	padding: 1.2rem;
+	color: #1976d2;
+	font-size: 1.05rem;
+	margin-top: 2.5rem;
+	background: linear-gradient(90deg, #e3f2fd 0%, #bbdefb 100%);
+	border-top: 2.5px solid #64b5f6;
 	font-family: 'Cairo', 'Roboto', Arial, sans-serif;
-	letter-spacing: 1px;
-	box-shadow: 0 -2px 8px rgba(21,101,192,0.08);
+	letter-spacing: 1.2px;
+	box-shadow: 0 -4px 24px rgba(33,150,243,0.10);
 }
+@media (max-width: 600px) {
+  header {
+    padding: 1.5rem 0.5rem 1rem 0.5rem;
+    border-bottom-left-radius: 18px;
+    border-bottom-right-radius: 18px;
+    font-size: 1rem;
+  }
+  h1 {
+    font-size: 1.2rem;
+  }
+  .combine, .library, .upload {
+    padding: 1rem 0.5rem;
+    border-radius: 12px;
+    max-width: 98vw;
+    font-size: 0.95rem;
+  }
+  input[type="text"], input[type="file"] {
+    font-size: 0.95rem;
+    padding: 0.5rem;
+  }
+  button, .box, .upload button {
+    font-size: 0.95rem;
+    padding: 0.5rem 1rem;
+    border-radius: 12px;
+  }
+  .box img, #imagesResult img, #imagesLibrary img {
+    width: 40px !important;
+    height: 40px !important;
+  }
+  footer {
+    font-size: 0.9rem;
+    padding: 0.7rem;
+  }
+  .header-decor span {
+    font-size: 0.9rem !important;
+    padding: 0.2rem 0.7rem !important;
+  }
+}
+
